deleted:    data/Balancepos20240131.txt 	new file:   data/Balancepos20250829.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 streamlit
-streamlit
 yfinance
 pandas
 openpyxl
@@ -15,5 +14,11 @@ beautifulsoup4
 requests
 feedparser
 trafilatura
-readability-lxml
 lxml
+sqlalchemy
+pymysql
+sqlalchemy
+pymysql
+feedparser
+tenacity
+python-dateutil
